Fixed captures table styling and dropdown visibility

--- a/gateway/sds_gateway/static/css/spectrumx_theme.css
+++ b/gateway/sds_gateway/static/css/spectrumx_theme.css
@@ -700,13 +700,13 @@ th.sortable:hover .sort-icon {
 .captures-table-fixed {
 	table-layout: fixed;
 	width: 100%;
-	min-width: 1200px;
+	max-width: 100%;
 }
 
 .captures-table-fixed th:nth-child(1),
 .captures-table-fixed td:nth-child(1) {
-	width: 30%;
-	min-width: 300px;
+	width: 35%;
+	min-width: 200px;
 	max-width: none;
 	overflow: visible;
 	text-overflow: clip;
@@ -724,32 +724,32 @@ th.sortable:hover .sort-icon {
 
 .captures-table-fixed th:nth-child(2),
 .captures-table-fixed td:nth-child(2) {
-	width: 10%;
-	min-width: 80px;
+	width: 12%;
+	min-width: 60px;
 }
 
 .captures-table-fixed th:nth-child(3),
 .captures-table-fixed td:nth-child(3) {
-	width: 12%;
-	min-width: 100px;
+	width: 15%;
+	min-width: 80px;
 }
 
 .captures-table-fixed th:nth-child(4),
 .captures-table-fixed td:nth-child(4) {
-	width: 8%;
-	min-width: 70px;
+	width: 10%;
+	min-width: 50px;
 }
 
 .captures-table-fixed th:nth-child(5),
 .captures-table-fixed td:nth-child(5) {
-	width: 8%;
-	min-width: 70px;
+	width: 10%;
+	min-width: 50px;
 }
 
 .captures-table-fixed th:nth-child(6),
 .captures-table-fixed td:nth-child(6) {
-	width: 14%;
-	min-width: 120px;
+	width: 18%;
+	min-width: 80px;
 }
 
 .captures-table-fixed th:nth-child(7),
